rename all indexes to todolist and reorg

--- a/todolist.html
+++ b/todolist.html
@@ -4,7 +4,7 @@
     <!-- Latest compiled and minified CSS -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./css/todolist.css" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 </head>
 
@@ -22,7 +22,7 @@
         <ul id="myUL">
         </ul>
     </div>
-    <script src="./index.js"></script>
+    <script src="./js/todolist.js"></script>
 </body>
 
 </html>
