--- a/luckydraw.html
+++ b/luckydraw.html
@@ -15,6 +15,7 @@
             min-width: 100vw;
             overflow: hidden;
             font-size: 300%;
+            text-shadow: 1px 0 0 rgba(255,255,255,0.2), -1px 0 0 rgba(255,255,255,0.2), 0 1px 0 rgba(255,255,255,0.2), 0 -1px 0 rgba(255,255,255,0.2), 1px 1px rgba(255,255,255,0.2), -1px -1px 0 rgba(255,255,255,0.2), 1px -1px 0 rgba(255,255,255,0.2), -1px 1px 0 rgba(255,255,255,0.2)
         }
         body {
             background-image:
